--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,14 @@ jobs:
       with:
         path-to-profile: cover.out
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+      with:
+        platforms: linux/amd64,linux/arm64
+
     - name: build and push branched image
       if: github.event_name == 'push'
       run: |
@@ -42,16 +50,12 @@ jobs:
     - name: build and push latest image
       if: github.event_name == 'push' && github.ref == 'refs/heads/main'
       run: |
-        docker build -t adobromilskiy/quake3-logcatcher:latest .
         docker login --username ${{ secrets.DOCKERHUB_USER }} --password ${{ secrets.DOCKERHUB_PASSWD }}
-        docker push adobromilskiy/quake3-logcatcher:latest
+        docker buildx build --push -t adobromilskiy/quake3-logcatcher:latest .
 
     - name: build and push tagged image
       if: github.event_name == 'push' && github.event.ref_type == 'tag'
       run: |
         GIT_TAG="${GITHUB_REF#refs/tags/}"
-        docker build -t adobromilskiy/quake3-logcatcher:${GIT_TAG} .
         docker login --username ${{ secrets.DOCKERHUB_USER }} --password ${{ secrets.DOCKERHUB_PASSWD }}
-        docker push adobromilskiy/quake3-logcatcher:${GIT_TAG}
-        docker tag adobromilskiy/quake3-logcatcher:${GIT_TAG} adobromilskiy/quake3-logcatcher:latest
-        docker push adobromilskiy/quake3-logcatcher:latest
+        docker buildx build --push -t adobromilskiy/quake3-logcatcher:${GIT_TAG} .
