--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,25 +37,22 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
-      with:
-        platforms: linux/amd64,linux/arm64
 
     - name: build and push branched image
       if: github.event_name == 'push'
       run: |
-        docker build -t adobromilskiy/quake3-logcatcher:${{ github.ref_name }} .
         docker login --username ${{ secrets.DOCKERHUB_USER }} --password ${{ secrets.DOCKERHUB_PASSWD }}
-        docker push adobromilskiy/quake3-logcatcher:${{ github.ref_name }}
+        docker buildx build --push --platform linux/amd64,linux/arm64 -t adobromilskiy/quake3-logcatcher:${{ github.ref_name }} .
 
     - name: build and push latest image
       if: github.event_name == 'push' && github.ref == 'refs/heads/main'
       run: |
         docker login --username ${{ secrets.DOCKERHUB_USER }} --password ${{ secrets.DOCKERHUB_PASSWD }}
-        docker buildx build --push -t adobromilskiy/quake3-logcatcher:latest .
+        docker buildx build --push --platform linux/amd64,linux/arm64 -t adobromilskiy/quake3-logcatcher:latest .
 
     - name: build and push tagged image
       if: github.event_name == 'push' && github.event.ref_type == 'tag'
       run: |
         GIT_TAG="${GITHUB_REF#refs/tags/}"
         docker login --username ${{ secrets.DOCKERHUB_USER }} --password ${{ secrets.DOCKERHUB_PASSWD }}
-        docker buildx build --push -t adobromilskiy/quake3-logcatcher:${GIT_TAG} .
+        docker buildx build --push --platform linux/amd64,linux/arm64 -t adobromilskiy/quake3-logcatcher:${GIT_TAG} .
