--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,20 +39,35 @@ jobs:
       uses: docker/setup-buildx-action@v2
 
     - name: build and push branched image
-      if: github.event_name == 'push'
+      if: github.event_name == 'push' && github.ref != 'refs/heads/main'
+      env:
+        USERNAME: ${{ secrets.USERNAME }}
       run: |
-        docker login --username ${{ secrets.DOCKERHUB_USER }} --password ${{ secrets.DOCKERHUB_PASSWD }}
-        docker buildx build --push --platform linux/amd64,linux/arm64 -t adobromilskiy/quake3-logcatcher:${{ github.ref_name }} .
+        docker login --username ${USERNAME} --password ${{ secrets.DOCKERHUB_PASSWD }}
+        docker login ghcr.io --username ${USERNAME} --password ${{ secrets.GITPKG_TOKEN }}
+        docker buildx build --push --platform linux/amd64,linux/arm64 \
+          -t ${USERNAME}/quake3-logcatcher:${{ github.ref_name }} \
+          -t ghcr.io/${USERNAME}/quake3-logcatcher:${{ github.ref_name }} .
 
     - name: build and push latest image
       if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      env:
+        USERNAME: ${{ secrets.USERNAME }}
       run: |
-        docker login --username ${{ secrets.DOCKERHUB_USER }} --password ${{ secrets.DOCKERHUB_PASSWD }}
-        docker buildx build --push --platform linux/amd64,linux/arm64 -t adobromilskiy/quake3-logcatcher:latest .
+        docker login --username ${USERNAME} --password ${{ secrets.DOCKERHUB_PASSWD }}
+        docker login ghcr.io --username ${USERNAME} --password ${{ secrets.GITPKG_TOKEN }}
+        docker buildx build --push --platform linux/amd64,linux/arm64 \
+          -t ${USERNAME}/quake3-logcatcher:latest \
+          -t ghcr.io/${USERNAME}/quake3-logcatcher:latest .
 
     - name: build and push tagged image
       if: github.event_name == 'push' && github.event.ref_type == 'tag'
+      env:
+        USERNAME: ${{ secrets.USERNAME }}
       run: |
         GIT_TAG="${GITHUB_REF#refs/tags/}"
-        docker login --username ${{ secrets.DOCKERHUB_USER }} --password ${{ secrets.DOCKERHUB_PASSWD }}
-        docker buildx build --push --platform linux/amd64,linux/arm64 -t adobromilskiy/quake3-logcatcher:${GIT_TAG} .
+        docker login --username ${USERNAME} --password ${{ secrets.DOCKERHUB_PASSWD }}
+        docker login ghcr.io --username ${USERNAME} --password ${{ secrets.GITPKG_TOKEN }}
+        docker buildx build --push --platform linux/amd64,linux/arm64 \
+          -t ${USERNAME}/quake3-logcatcher:${GIT_TAG} \
+          -t ghcr.io/${USERNAME}/quake3-logcatcher:${GIT_TAG} .
