--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,8 +43,8 @@ jobs:
       env:
         USERNAME: ${{ secrets.USERNAME }}
       run: |
-        docker login --username ${USERNAME} --password ${{ secrets.DOCKERHUB_PASSWD }}
-        docker login ghcr.io --username ${USERNAME} --password ${{ secrets.GITPKG_TOKEN }}
+        echo ${DOCKERHUB_PASSWD} | docker login --username ${USERNAME} --password-stdin
+        echo ${GITPKG_TOKEN} | docker login ghcr.io --username ${USERNAME} --password-stdin
         docker buildx build --push --platform linux/amd64,linux/arm64 \
           -t ${USERNAME}/quake3-logcatcher:${{ github.ref_name }} \
           -t ghcr.io/${USERNAME}/quake3-logcatcher:${{ github.ref_name }} .
@@ -54,8 +54,8 @@ jobs:
       env:
         USERNAME: ${{ secrets.USERNAME }}
       run: |
-        docker login --username ${USERNAME} --password ${{ secrets.DOCKERHUB_PASSWD }}
-        docker login ghcr.io --username ${USERNAME} --password ${{ secrets.GITPKG_TOKEN }}
+        echo ${DOCKERHUB_PASSWD} | docker login --username ${USERNAME} --password-stdin
+        echo ${GITPKG_TOKEN} | docker login ghcr.io --username ${USERNAME} --password-stdin
         docker buildx build --push --platform linux/amd64,linux/arm64 \
           -t ${USERNAME}/quake3-logcatcher:latest \
           -t ghcr.io/${USERNAME}/quake3-logcatcher:latest .
@@ -66,8 +66,8 @@ jobs:
         USERNAME: ${{ secrets.USERNAME }}
       run: |
         GIT_TAG="${GITHUB_REF#refs/tags/}"
-        docker login --username ${USERNAME} --password ${{ secrets.DOCKERHUB_PASSWD }}
-        docker login ghcr.io --username ${USERNAME} --password ${{ secrets.GITPKG_TOKEN }}
+        echo ${DOCKERHUB_PASSWD} | docker login --username ${USERNAME} --password-stdin
+        echo ${GITPKG_TOKEN} | docker login ghcr.io --username ${USERNAME} --password-stdin
         docker buildx build --push --platform linux/amd64,linux/arm64 \
           -t ${USERNAME}/quake3-logcatcher:${GIT_TAG} \
           -t ghcr.io/${USERNAME}/quake3-logcatcher:${GIT_TAG} .
